<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlugarExemplarFragment">

    <Spinner
        android:id="@+id/spRAAluguel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="539dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spExemplares"
        app:layout_constraintStart_toStartOf="@+id/spExemplares"
        app:layout_constraintTop_toBottomOf="@+id/tvNome4" />

    <TextView
        android:id="@+id/tvResultadoListarAluguel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarAluguel" />

    <Button
        android:id="@+id/btnBuscarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="34dp"
        android:text="@string/btnBuscarAluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRA4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="105dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/spRAAluguel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeletarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/btnDeletarAluno"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEditarAluguel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnInserirAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/btnInserirAluno"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEditarAluguel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btnEditarAluno"
        app:layout_constraintBottom_toTopOf="@+id/btnListarAluguel"
        app:layout_constraintEnd_toEndOf="@+id/btnListarAluguel" />

    <Button
        android:id="@+id/btnListarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="230dp"
        android:text="@string/btnListarAluno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeletarAluguel" />

    <EditText
        android:id="@+id/etDataDevolucao"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etDataDevolucao"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnEditarAluguel"
        app:layout_constraintStart_toStartOf="@+id/btnEditarAluguel"
        app:layout_constraintTop_toBottomOf="@+id/etDataRetirada" />

    <EditText
        android:id="@+id/etDataRetirada"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/etDataRetirada"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etDataDevolucao"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spExemplares"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNome4"
        app:layout_constraintStart_toStartOf="@+id/etDataRetirada"
        app:layout_constraintTop_toBottomOf="@+id/tvNome4" />

</androidx.constraintlayout.widget.ConstraintLayout>